--- a/grid-packages/ag-grid-docs/documentation/src/design-system/modules/license-pricing.module.scss
+++ b/grid-packages/ag-grid-docs/documentation/src/design-system/modules/license-pricing.module.scss
@@ -667,6 +667,7 @@ transition: all 0.3s ease-in;
     &:first-child {
         margin-top: 0;
     }
+    z-index: 1;
 }
 
 .tableContainer {
